Trying to prevent overflow of cards on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ body.nav-open .bar.bottom {
     .hero {
         flex-direction: column;
         text-align: center;
-        padding: 6rem 2rem 2rem;
+        padding: 15rem 2rem 7rem;
         min-height: auto;
     }
 
